fix error from pycodestyle

--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,7 +4,7 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if name < 89 %}
+        {% if name % 2 != 0 %}
           <H1>{{name}} is even</H1>
         {% else %}
           <H1>{{name}} is odd</H1>
