restructure for not use statemment in html with jinj

--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,10 +4,6 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-      {%- if name % 2 != 0 %}
-        <H1>{{name}} is odd</H1>
-      {%- else %}
-        <H1>{{name}} is even</H1>
-      {%- endif %}
+        <H1>{{name}} is {{even}}</H1>
     </BODY>
 </HTML>
