--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -6,11 +6,11 @@
     <BODY>
         <H1>States</H1>
         <UL>
-        {% for state in states|sort(attribute="name") %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+        {% for state in states.values()|sort(attribute="name") %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
                 <UL>
-                {% for cit in state.cities|sort(attribute="name") %}
-                      <LI>{{ cit.id }}: <B>{{ cit.name }}</B></LI>
+                {% for city in state.cities|sort(attribute="name") %}
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
                 {% endfor %}
                 </UL>
             </LI>
