--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -40,16 +40,28 @@
 
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.popover::-webkit-scrollbar {
+	display: none;
+}
+
+.locations:hover .popover {
+	display: inline-block;
 	max-height: 300px;
+	overflow-y: scroll;
+	/* Hide scrollbar for Firefox */
+	scrollbar-width: none;
+
 }
 
-.filter_locations:hover .popover {
+.filter_amenities:hover .popover {
 	display: inline-block;
-
-}
-
-.amenities:hover .popover {
-	display: inline-block;
+	max-height: 300px;
+	overflow-y: scroll;
+	/* Hide scrollbar for IE, Edge and Firefox */
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
 }
 
 ul {
